--- a/src/main/resources/templates/KundeForm.html
+++ b/src/main/resources/templates/KundeForm.html
@@ -21,6 +21,61 @@
     </div>
 </nav>
 <h1 class="formh1">Kunde Registrierung</h1>
+<div class="container">
+    <form method="POST" th:object="${kunde}" th:action="@{/registerKunde}">
+        <div class="form-group">
+            <label for="vorname">Vorname:</label>
+            <input class="form-control" type="text" id="vorname" th:field="*{vorname}" required>
+        </div>
+        <div class="form-group">
+            <label for="nachname">Nachname:</label>
+            <input class="form-control" type="text" id="nachname" th:field="*{nachname}" required>
+        </div>
+        <div class="form-group">
+            <label for="email">E-Mail:</label>
+            <input class="form-control" type="email" id="email" th:field="*{email}" required>
+        </div>
+        <div class="form-group">
+            <label for="geburtsdatum">Geburtsdatum:</label>
+            <input class="form-control" type="date" id="geburtsdatum" th:field="*{geburtsdatum}" required>
+        </div>
+        <div class="form-group">
+            <label for="passwort">Passwort:</label>
+            <input class="form-control" type="password" id="passwort" th:field="*{passwort}" required>
+        </div>
+        <div class="form-group">
+            <label for="guthaben">Guthaben:</label>
+            <input class="form-control" type="number" id="guthaben" th:field="*{guthaben}">
+        </div>
+        <div class="form-group">
+            <label for="beitragsbefreitJA">Ja</label>
+            <input class="form-control" type="radio" id="beitragsbefreitJA" th:field="*{beitragsbefreit}" value="True" required>
+            <label for="beitragsbefreitNein">Nein</label>
+            <input class="form-control" type="radio" id="beitragsbefreitNein" th:field="*{beitragsbefreit}" value="False" required>
+        </div>
+        <h6>Adresse:</h6>
+        <div class="form-group">
+            <label for="stadt">Stadt:</label>
+            <input class="form-control" type="text" id="stadt" th:field="*{stadt}" required>
+        </div>
+        <div class="form-group">
+            <label for="strasse">Strasse:</label>
+            <input class="form-control" type="text" id="strasse" th:field="*{strasse}" required>
+        </div>
+        <div class="form-group">
+            <label for="plz">Postleitzahl:</label>
+            <input class="form-control" type="number" id="plz" th:field="*{plz}" required>
+        </div>
+        <div class="form-group">
+            <label for="hausnummer">Hausnummer:</label>
+            <input class="form-control" type="number" id="hausnummer" th:field="*{hausnummer}" required>
+        </div>
+        <div class="form-group">
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+    </form>
+
+</div>
 
 </body>
 </html>
