--- a/src/main/resources/templates/BibliothekarIndex.html
+++ b/src/main/resources/templates/BibliothekarIndex.html
@@ -10,8 +10,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
           integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/css/style.css}">
 
-    <title></title>
+    <title>Bibliothekar Seite</title>
 </head>
 
 <body>
@@ -20,6 +21,60 @@
         <a class="navbar-brand" href="#">Bibliothek-Logo</a>
     </div>
 </nav>
+
+<div class="container">
+    <div class="row">
+        <th:block class="row temp-featured" th:each="artikel, in : ${artikeln}">
+            <div class="artikel col-lg-4 col-md-6 mb-4">
+                <div class="card  h-100">
+                    <div class="card-header">
+                        <h5 class="artikel-titel" th:text="${artikel.getBezeichnung()}"></h5>
+                    </div>
+                    <div class="card-body">
+                        <p th:text="${artikel.getBeschreibung()}"></p>
+                        <p th:text="${artikel.getIsbnnummer()}"></p>
+                        <p th:text="${artikel.getErscheinungsdatum()}"></p>
+                        <p th:text="${artikel.getMedium()}"></p>
+                        <div th:if="${!exemplare.get(in.index).isEmpty()}">
+                        <p>Exemplar IDs For Artikel:</p>
+                        <span th:text="${exemplare.get(in.index)}"></span>
+                        </div>
+
+                        <div th:if="${!genres.get(in.index).isEmpty()}">
+                        <p>Genres:</p>
+                        <span th:text="${genres.get(in.index)}"></span>
+                    </div>
+                    </div>
+                </div>
+            </div>
+    </div>
+</div>
+
+<hr>
+
+<div class="container">
+    <h4>Alle Ausleihen:</h4>
+    <table class="table">
+        <tr>
+            <th scope="col">Ausleihe ID</th>
+            <th scope="col">Beginn</th>
+            <th scope="col">Ende</th>
+            <th scope="col">Zurueckgegeben</th>
+            <th scope="col">Kunde</th>
+            <th scope="col">Exemplar ID</th>
+        </tr>
+        <tr th:each="ausleihe : ${ausleihen}">
+            <td th:text="${ausleihe.getId()}"></td>
+            <td th:text="${ausleihe.getBeginn()}"></td>
+            <td th:text="${ausleihe.getEnde()}"></td>
+            <td th:text="${ausleihe.getZurueckgabe()}"></td>
+            <td th:text="${ausleihe.getKundeEMail()}"></td>
+            <td th:text="${ausleihe.getExemplarId()}"></td>
+        </tr>
+    </table>
+
+
+</div>
 
 
 </body>
